--- a/devney_notes/_config.yml
+++ b/devney_notes/_config.yml
@@ -23,6 +23,7 @@ email: devneyhamilton@gmail.com
 description: null # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
+domain: devneyhamilton.github.io
 url: "https://devneyhamilton.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: null
 github_username:  devneyhamilton
