--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Devney Hamilton
+email: devneyhamilton@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  More details on my work. 
 domain: "devneyhamilton.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://devneyhamilton.github.io" # the base hostname & protocol for your site, e.g. http://example.com
